--- a/app/src/main/res/layout/activity_addcar.xml
+++ b/app/src/main/res/layout/activity_addcar.xml
@@ -98,6 +98,8 @@
                         android:layout_height="wrap_content"
                         android:background="@null"
                         android:maxLines="1"
+                        android:maxLength="11"
+                        android:inputType="number"
                         android:gravity="center_vertical"
                         android:hint="请填写手机号码"
                         android:textColorHint="@color/hint_input_color"
@@ -518,6 +520,7 @@
                     android:layout_toLeftOf="@id/year1"
                     android:layout_toRightOf="@id/caryear"
                     android:background="@null"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:gravity="center_vertical"
                     android:hint="请填写车龄使用年限"
@@ -552,6 +555,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
+                    android:inputType="number"
                     android:layout_toLeftOf="@id/line"
                     android:layout_toRightOf="@id/carline"
                     android:background="@null"
@@ -590,6 +594,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
+                    android:inputType="number"
                     android:layout_toLeftOf="@id/money1"
                     android:layout_toRightOf="@id/carmoney"
                     android:background="@null"
@@ -631,6 +636,7 @@
                     android:layout_toLeftOf="@id/moneyline"
                     android:layout_toRightOf="@id/money"
                     android:background="@null"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:gravity="center_vertical"
                     android:hint="请输入金额，如22.23万元(选填)"
