--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -66,11 +66,11 @@
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:visibility="visible">
-                <ImageView
-                    android:id="@+id/imgg"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:src="@mipmap/warning"/>
+                <!--<ImageView-->
+                    <!--android:id="@+id/imgg"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="60dp"-->
+                    <!--android:src="@mipmap/warning"/>-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
