--- a/app/src/main/res/layout/activity_addcar.xml
+++ b/app/src/main/res/layout/activity_addcar.xml
@@ -71,7 +71,7 @@
                         android:background="@null"
                         android:maxLines="1"
                         android:gravity="center_vertical"
-                        android:hint="请输入客户名称(必填)"
+                        android:hint="请填写车主姓名(必填)"
                         android:textColorHint="@color/hint_input_color"
                         android:textSize="14dp" />
 
@@ -171,6 +171,7 @@
                         android:background="@null"
                         android:maxLines="1"
                         android:gravity="center_vertical"
+                        android:maxLength="18"
                         android:hint="请填写证件号码"
                         android:textColorHint="@color/hint_input_color"
                         android:textSize="14dp" />
@@ -550,7 +551,7 @@
                     android:gravity="center_vertical"
                     android:text="公里" />
 
-                <EditText
+                <com.example.yzcl.utils.EdittextSub
                     android:id="@+id/mileage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -600,12 +601,14 @@
                     android:background="@null"
                     android:maxLines="1"
                     android:gravity="center_vertical"
+                    android:maxLength="5"
                     android:hint="请填写购车金额，例如：22.23"
                     android:textColorHint="@color/hint_input_color"
                     android:textSize="14dp" />
             </RelativeLayout>
 
             <RelativeLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginTop="1dp"
@@ -746,10 +749,10 @@
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:background="@null"
-                    android:gravity="center_vertical"
+                    android:gravity="top"
                     android:paddingRight="10dp"
-                    android:maxLength="200"
-                    android:hint="请描述，不超过200字"
+                    android:maxLength="100"
+                    android:hint="请描述，不超过100字"
                     android:textColorHint="@color/hint_input_color"
                     android:textSize="14dp" />
             </LinearLayout>
